agregando contenido en portafolio y experiencia

--- a/experiencia.html
+++ b/experiencia.html
@@ -8,10 +8,38 @@
 </head>
 
 <body>
-    <section id="certificado">
-        <article>
-
+    <section id="certificados">
+        <h1>Certificados</h1>
+        <article class="certificado">
+            <h2>Certificado Inglés - Académico 2</h2>
+            <p>Desarrollé competencias comunicativas en inglés, reforzando mis habilidades para el entorno académico y
+                profesional.</p>
+            <img src="/img/Certificado Inglés.png" alt="Certificado Inglés">
         </article>
+
+        <article class="certificado">
+            <h2>Certificado Coursera - Aprendiendo a aprender</h2>
+            <p>Curso orientado a mejorar mis estrategias de estudio y aprendizaje, optimizando mi desempeño en la
+                universidad.
+            </p>
+            <img src="/img/Certificado Coursera - Aprendiendo a aprender.jpg" alt="Certificado Coursera">
+        </article>
+
+        <article class="certificado">
+            <h2>Certificado AWS - AWS Security Fundamentals Second Edition (Español LATAM)</h2>
+            <p>Adquirí conocimientos sobre los principios de seguridad en la nube, sus servicios y las mejores prácticas
+                para proteger entornos AWS.
+            </p>
+            <img src="/img/AWS Security Fundamentals Second Edition (Español LATAM).png" alt="">
+        </article>
+        <article class="certificado">
+            <h2>Certificado AWS - Getting Started with AWS Cloud Essentials (Español LATAM)</h2>
+            <p>Comprendí los fundamentos de la computación en la nube y su aplicación en soluciones tecnológicas a nivel
+                global.
+            </p>
+            <img src="/img/Getting Started with AWS Cloud Essentials (Español LATAM).png" alt="">
+        </article>
+
     </section>
 </body>
 
