--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
 <body>
     <main>
         <nav>
+            <!--Navegacion-->
+            <h1>Navegación</h1>
             <ul>
                 <li>
                     <a href="portafolio.html">Portafolio</a>
                     <!--digamos que quieres hacer referencia a una parte especifica del mismo archivo (para eso pusiste id)
                         <a href="index.html#contactos">Portafolio</a>
                     -->
-                    
+
                 </li>
                 <li>
                     <a href="experiencia.html">Experiencia</a>
                 </li>
             </ul>
         </nav>
+
         <section id="contactos">
             <!--Contactos-->
+            <h1>Contactos</h1>
             <ul>
                 <li>
                     Nro. Celular: 0984561058
@@ -36,10 +40,15 @@
         </section>
         <section id="infoPersonal">
             <!--Informacion general-->
-            <img src="/img/miFoto.jpg" alt="Foto personal">
-            <p>
-                Mi nombre es Alison Katiuska Lita Ushiña, soy estudiante de la Escuela Politecnica Nacional
-                de la carrera Ingenieria de Software.
+            <img src="/img/miFoto.jpg" alt="Foto personal" style="width: 500px; height: 600px; object-fit:cover;">
+            <h1>Acerca de mí</h1>
+            <p style="font-size: 50px;">
+                Soy estudiante de Ingeniería de Software apasionada por crear soluciones tecnológicas que generen un
+                impacto positivo. Aunque el camino no siempre ha sido fácil y la carrera presenta muchos retos, me
+                esfuerzo cada día por aprender, mejorar y no rendirme. Me motiva combinar creatividad y disciplina
+                para
+                diseñar sistemas atractivos. Me gustaría especializarme en desarrollo front-end y diseño web, aunque
+                también me interesan las redes y la conectividad.
             </p>
         </section>
     </main>
