--- a/portafolio.html
+++ b/portafolio.html
@@ -8,42 +8,167 @@
 </head>
 
 <body>
-    <section id="proyecto">
-        <h1>Proyectos</h1>
+    <section id="portafolio">
+        <h1>Proyectos</h1><br>
+        <div class="proyecto">
+            <button class="proyecto-titulo">
+                DermaGenius
+            </button>
+            <div class="proyecto-detalle">
+                <h2>DermaGenius</h2>
+                <p>
+                    Proyecto desarrollado en la materia de Inteligencia Artificial, enfocado en el uso de redes
+                    convolucionales (YOLO y VGG16) para entrenar un modelo capaz de clasificar tres categorías:
+                    tipo de piel, afecciones cutáneas y edad biológica estimada. Se integró en una plataforma
+                    de e-commerce que recomienda productos dermatológicos personalizados.
+                </p>
+                <div class="proyecto-galeria">
+                    <img src="/img/IA-1.png" alt="DermaGenius vista 1">
+                    <img src="/img/IA-2.png" alt="DermaGenius vista 2">
+                    <img src="/img/IA-3.png" alt="DermaGenius vista 3">
+                </div>
+
+                <div class="proyecto-link">
+                    <a href="https://github.com/alison2704/DermaGenius.git">
+                        Ver en GitHub
+                    </a><br><br><br>
+                </div>
+            </div>
+        </div>
+
+        <!--2do-->
+        <div class="proyecto">
+            <button class="proyecto-titulo">
+                InkHarmony
+            </button>
+            <div class="proyecto-detalle">
+                <h2>InkHarmony</h2>
+                <p>
+                    Es una aplicación de escritorio desarrollada en Java que funciona como un reproductor musical
+                    offline, ofreciendo una experiencia personalizada. Diseñada con una interfaz intuitiva, permite
+                    gestionar
+                    canciones, artistas y listas de reproducción a través de operaciones CRUD conectadas a una base de
+                    datos
+                    SQLite. Durante el desarrollo se aplicaron patrones de diseño y una arquitectura en capas,
+                    integrando
+                    tecnologías
+                    como JavaFX, JLayer, JDBC y Scene Builder.
+                </p>
+                <div class="proyecto-galeria">
+                    <img src="/img/Diseño de sw -1.png" alt="InkHarmony vista 1">
+                    <img src="/img/Diseño de sw -2.png" alt="InkHarmony vista 1">
+                    <img src="/img/Diseño de sw -3.png" alt="InkHarmony vista 3">
+                </div>
+                <div class="proyecto-link">
+                    <a href="https://github.com/BaphomeT-T/InkHarmony.git">
+                        Ver en GitHub
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!--3ro-->
+        <div class="proyecto">
+            <button class="proyecto-titulo">
+                Gestor de películas
+            </button>
+            <div class="proyecto-detalle">
+                <h2>Gestor de películas</h2>
+                <p>El proyecto consistió en el diseño e implementación de un sistema distribuido de gestión de
+                    películas, con tres nodos ubicados en Quito, Guayaquil y Cuenca, cada uno ejecutando un DBMS
+                    distinto (PostgreSQL y Oracle). El sistema aplicó técnicas de fragmentación horizontal y vertical,
+                    además de replicación unidireccional y bidireccional. Para la implementación trabajamos con Radmin
+                    VPN, conectando tres computadoras físicas simulando una red distribuida real. La interacción con el
+                    sistema se realizó desde una interfaz web intuitiva y amigable que permitía visualizar los procesos
+                    de fragmentación y replicación en tiempo real.
+                </p>
+
+                <div class="proyecto-galeria">
+                    <img src="/img/BDD-1.png" alt="Gestor de películas vista 1">
+                    <img src="/img/BDD-2.png" alt="Gestor de películas vista 2">
+                </div>
+
+                <div class="proyecto-link">
+                    <a href="https://github.com/Matein0411/Gestion_peliculas_entorno_distribuido.git">
+                        Ver en GitHub
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!--4to-->
+        <div class="proyecto">
+            <button class="proyecto-titulo">
+                DarkBit Interactive
+            </button>
+            <div class="proyecto-detalle">
+                <h2>DarkBit Interactive</h2>
+                <p>DarkBit Interactive es un producto multimedia interactivo desarrollado en C++ con OpenGL y OpenAL
+                    Soft, que ofrece una experiencia inmersiva de terror en 3D inspirada en Five Nights at Freddy’s. El
+                    proyecto integra renderizado 3D en tiempo real, sonido 3D ambiental y control de cámara en primera
+                    persona, logrando una simulación que desafía los sentidos del jugador.
+                </p>
+
+                <div class="proyecto-galeria">
+                    <img src="/img/Computación gráfica - 1.jpg" alt="DarkBit Interactive vista 1">
+                    <img src="/img/Computación gráfica - 2.jpeg" alt="DarkBit Interactive vista 2">
+                    <img src="/img/Computación gráfica - 3.jpeg" alt="DarkBit Interactive vista 3">
+                    <img src="/img/Computación gráfica - 4.jpeg" alt="DarkBit Interactive vista 4">
+                </div>
+                <div class="proyecto-link">
+                    <a href="https://github.com/Matein0411/2025A_PARALELO_GR1.git">
+                        Ver en GitHub
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!--5to-->
+        <div class="proyecto">
+            <button class="proyecto-titulo">
+                Man-in-the-middle
+            </button>
+            <div class="proyecto-detalle">
+                <h2>Man-in-the-middle</h2>
+                <p>Este proyecto consistió en la recreación ética de un ataque Man-in-the-Middle en un entorno
+                    controlado para comprender vulnerabilidades a nivel de red. Utilizamos máquinas virtuales (Kali
+                    Linux como equipo atacante y Windows 11 como víctima) configuradas en modo adaptador puente para
+                    simular una red real. El objetivo fue analizar técnicas de suplantación como ARP spoofing y DNS
+                    spoofing, y demostrar cómo un atacante puede redirigir tráfico hacia un servidor falso (Apache2)
+                    para capturar credenciales, registradas y verificadas mediante herramientas de diagnóstico.
+                </p>
+                <div class="proyecto-galeria">
+                    <img src="/img/Fundamentos de Redes y Conectividad.jpg" alt="MITM vista 1">
+                </div>
+            </div>
+        </div>
+
+        <!--6to-->
+        <div class="proyecto">
+            <button class="proyecto-titulo">
+                Galeto
+            </button>
+            <div class="proyecto-detalle">
+                <h2>Galeto</h2>
+                <p>Proyecto desarrollado para la materia de Ingeniería de Software y Requerimientos, es una página web
+                    que integra carga de imágenes, votaciones musicales y reacciones de los usuarios. Implementamos
+                    módulos de registro, inicio de sesión y gestión de contenido.
+                </p>
+                <div class="proyecto-galeria">
+                    <img src="/img/Ingeniería de sw y Requerimientos - 1.jpg" alt="Galeto vista 1">
+                    <img src="/img/Ingeniería de sw y Requerimientos - 2.jpg" alt="Galeto vista 2">
+                    <img src="/img/Ingeniería de sw y Requerimientos - 3.jpg" alt="Galeto vista 3">
+                </div>
+                <div class="proyecto-link">
+                    <a href="https://dev.azure.com/Grupo42024B/Proyecto_PrimerBimestre_G4">
+                        Ver en GitHub
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
     </section>
-
-    <section>
-        <table>
-            <tr>
-                <th>
-                    Nombre proyecto
-                </th>
-                <th>
-                    Descripcion proyecto
-                </th>
-                <th>
-                    Imagen
-                </th>
-            </tr>
-
-            <tr>
-                <td>
-                    Proyecto1
-                </td>
-                <td>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </td>
-                <td>
-                    <img src="" alt="">
-                </td>
-
-            </tr>
-        </table>
-    </section>
-
-
-
-
 
 </body>
 
